# convidaapi

./: .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/dummy/: dummy.ini  setup.py
backend/dummy/dummy/: __init__.py  views.py
client/: example.js  package-lock.json  package.json
