[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "cornice>=6.1.0",
    "cornice-swagger>=1.0.1",
    "pip>=25.1.1",
    "pyramid>=2.0.2",
    "setuptools>=80.9.0",
    "waitress>=3.0.2",
]
